@@ -3,6 +3,7 @@ package Travel::Routing::DE::EFA;
 use strict;
 use warnings;
 use 5.010;
+use utf8;
 
 no if $] >= 5.018, warnings => "experimental::smartmatch";
 
@@ -41,7 +42,7 @@ use Exception::Class (
 	},
 );
 
-our $VERSION = '2.18';
+our $VERSION = '2.19';
 
 sub set_time {
 	my ( $self, %conf ) = @_;
@@ -1013,7 +1014,7 @@ Travel::Routing::DE::EFA - unofficial interface to EFA-based itinerary services
 
 =head1 VERSION
 
-version 2.18
+version 2.19
 
 =head1 DESCRIPTION
 
